ran model client and working p1

--- a/notebooks/00_initial_pahse/start.ipynb
+++ b/notebooks/00_initial_pahse/start.ipynb
@@ -7,34 +7,79 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Can't instantiate abstract class BaseMemory without an implementation for abstract methods 'retrieve', 'store'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01magent_framework\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmodel_clients\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mbase_client\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m BaseModelClient\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01magent_framework\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mtools\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mbase_tool\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m BaseTool\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m memory = \u001b[43mBaseMemory\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      7\u001b[39m model_client = BaseModelClient()\n\u001b[32m      8\u001b[39m tool = BaseTool()\n",
-      "\u001b[31mTypeError\u001b[39m: Can't instantiate abstract class BaseMemory without an implementation for abstract methods 'retrieve', 'store'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<agent_framework.model_clients.openai_client.OpenAIClient object at 0x0000023CC9BF9BE0>\n"
      ]
     }
    ],
    "source": [
-    "from agent_framework.agents.base_agent import BaseAgent\n",
-    "from agent_framework.memory.base_memory import BaseMemory\n",
-    "from agent_framework.model_clients.base_client import BaseModelClient\n",
-    "from agent_framework.tools.base_tool import BaseTool\n",
+    "# from agent_framework.agents.\n",
+    "from agent_framework.memory.unbounded_memory import UnboundedMemory\n",
+    "from agent_framework.model_clients.openai_client import OpenAIClient\n",
+    "from agent_framework.tools.example_tools import GetCurrentTimeTool\n",
+    "from agent_framework.configs.settings import Settings\n",
     "\n",
-    "memory = BaseMemory()\n",
-    "model_client = BaseModelClient()\n",
-    "tool = BaseTool()\n",
-    "agent = BaseAgent(memory=memory, model_client=model_client, tools=[tool])\n",
-    "print(agent)  # Just to demonstrate usage"
+    "settings = Settings()\n",
+    "memory = UnboundedMemory()\n",
+    "model_client = OpenAIClient(model=\"gpt-5.1\", api_key=settings.OPENAI_API_KEY)\n",
+    "tool = GetCurrentTimeTool()\n",
+    "# agent = BaseAgent(memory=memory, model_client=model_client, tools=[tool])\n",
+    "# print(agent)  # Just to demonstrate usage\n",
+    "print(model_client)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "dcc89a0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ModelResponse(id='3ddcce60-f1b2-4141-80e7-23e483791c76', role='assistant', content='Hi!  \\n\\nWhat would you like to work on or talk about today?', timestamp=datetime.datetime(2026, 1, 25, 18, 38, 52, 342596), metadata={}, usage={'prompt_tokens': 7, 'completion_tokens': 24, 'total_tokens': 31}, model='gpt-5.1-2025-11-13', finish_reason='stop')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from agent_framework.messages.agent_messages import UserMessage\n",
+    "\n",
+    "user_message = UserMessage(content=\"hi\")\n",
+    "response = await model_client.generate([user_message])\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0afeaa01",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hi!  \\n\\nWhat would you like to work on or talk about today?'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.content"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcc89a0f",
+   "id": "b98702ae",
    "metadata": {},
    "outputs": [],
    "source": []
