feat: Introduce core agent framework components including ReAct agent, model clients, built-in and MCP tools, observability, and comprehensive documentation.

--- a/notebooks/00_initial_pahse/start.ipynb
+++ b/notebooks/00_initial_pahse/start.ipynb
@@ -10,24 +10,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<agent_framework.model_clients.openai_client.OpenAIClient object at 0x0000023CC9BF9BE0>\n"
+      "<agent_framework.agents.react_agent.ReActAgent object at 0x000002110E47ACF0>\n"
      ]
     }
    ],
    "source": [
-    "# from agent_framework.agents.\n",
+    "from agent_framework.agents import ReActAgent\n",
     "from agent_framework.memory.unbounded_memory import UnboundedMemory\n",
     "from agent_framework.model_clients.openai_client import OpenAIClient\n",
-    "from agent_framework.tools.example_tools import GetCurrentTimeTool\n",
+    "from agent_framework.tools.builtin_tools import GetCurrentTimeTool\n",
     "from agent_framework.configs.settings import Settings\n",
     "\n",
     "settings = Settings()\n",
     "memory = UnboundedMemory()\n",
     "model_client = OpenAIClient(model=\"gpt-5.1\", api_key=settings.OPENAI_API_KEY)\n",
     "tool = GetCurrentTimeTool()\n",
-    "# agent = BaseAgent(memory=memory, model_client=model_client, tools=[tool])\n",
-    "# print(agent)  # Just to demonstrate usage\n",
-    "print(model_client)"
+    "agent = ReActAgent(name=\"test_agent\", description=\"test_agent\", memory=memory, model_client=model_client, tools=[tool])\n",
+    "print(agent)  # Just to demonstrate usage"
    ]
   },
   {
@@ -37,9 +36,23 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"timestamp\": \"2026-01-25T20:29:58.972678\", \"level\": \"INFO\", \"name\": \"agent_framework\", \"message\": \"[test_agent] Starting run for input: what is current time...\"}\n",
+      "{\"timestamp\": \"2026-01-25T20:29:58.973425\", \"level\": \"INFO\", \"name\": \"agent_framework\", \"message\": \"[test_agent] Iteration 1/10\"}\n",
+      "{\"timestamp\": \"2026-01-25T20:30:00.550082\", \"level\": \"INFO\", \"name\": \"httpx\", \"message\": \"HTTP Request: POST https://api.openai.com/v1/responses \\\"HTTP/1.1 200 OK\\\"\"}\n",
+      "{\"timestamp\": \"2026-01-25T20:30:00.617550\", \"level\": \"INFO\", \"name\": \"agent_framework\", \"message\": \"[test_agent] Tool calls requested: ['get_current_time']\"}\n",
+      "{\"timestamp\": \"2026-01-25T20:30:00.618537\", \"level\": \"INFO\", \"name\": \"agent_framework\", \"message\": \"[test_agent] Executing get_current_time with {'timezone': 'UTC'}\"}\n",
+      "{\"timestamp\": \"2026-01-25T20:30:00.619155\", \"level\": \"INFO\", \"name\": \"agent_framework\", \"message\": \"[test_agent] Iteration 2/10\"}\n",
+      "{\"timestamp\": \"2026-01-25T20:30:04.096787\", \"level\": \"INFO\", \"name\": \"httpx\", \"message\": \"HTTP Request: POST https://api.openai.com/v1/responses \\\"HTTP/1.1 200 OK\\\"\"}\n",
+      "{\"timestamp\": \"2026-01-25T20:30:04.098941\", \"level\": \"INFO\", \"name\": \"agent_framework\", \"message\": \"[test_agent] No tool calls, finishing.\"}\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "ModelResponse(id='3ddcce60-f1b2-4141-80e7-23e483791c76', role='assistant', content='Hi!  \\n\\nWhat would you like to work on or talk about today?', timestamp=datetime.datetime(2026, 1, 25, 18, 38, 52, 342596), metadata={}, usage={'prompt_tokens': 7, 'completion_tokens': 24, 'total_tokens': 31}, model='gpt-5.1-2025-11-13', finish_reason='stop')"
+       "'The current time is 2026-01-25T20:30:00.619031 (UTC).'"
       ]
      },
      "execution_count": 2,
@@ -51,29 +64,8 @@
     "from agent_framework.messages.agent_messages import UserMessage\n",
     "\n",
     "user_message = UserMessage(content=\"hi\")\n",
-    "response = await model_client.generate([user_message])\n",
+    "response = await agent.run(\"what is current time\")\n",
     "response"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "0afeaa01",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Hi!  \\n\\nWhat would you like to work on or talk about today?'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "response.content"
    ]
   },
   {
@@ -87,7 +79,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "agent-framework",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
