--- a/notebooks/00_initial_pahse/start.ipynb
+++ b/notebooks/00_initial_pahse/start.ipynb
@@ -79,7 +79,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "agent-framework",
    "language": "python",
    "name": "python3"
   },
