feat: Add media serialization and deserialization for tool messages
- Introduced _types.py for handling media content serialization (images and strings).
- Implemented serialize_media_content and deserialize_media_content functions.
- Enhanced client_messages.py to support multimodal content in UserMessage and AssistantMessage.
- Added ToolExecutionResultMessage to handle tool responses with serialized content.
- Created OpenAIClient for interfacing with OpenAI API, supporting chat completions and tool calls.
- Implemented token counting using tiktoken for message inputs.
- Added utility functions in utils.py for media handling.

--- a/notebooks/00_initial_pahse/start.ipynb
+++ b/notebooks/00_initial_pahse/start.ipynb
@@ -10,23 +10,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<agent_framework.agents.react_agent.ReActAgent object at 0x000002110E47ACF0>\n"
+      "<agent_framework.model_clients.openai.openai_client.OpenAIClient object at 0x0000019C064D41A0>\n"
      ]
     }
    ],
    "source": [
-    "from agent_framework.agents import ReActAgent\n",
+    "# from agent_framework.agents import ReActAgent\n",
     "from agent_framework.memory.unbounded_memory import UnboundedMemory\n",
-    "from agent_framework.model_clients.openai_client import OpenAIClient\n",
+    "from agent_framework.model_clients.openai.openai_client import OpenAIClient\n",
     "from agent_framework.tools.builtin_tools import GetCurrentTimeTool\n",
     "from agent_framework.configs.settings import Settings\n",
     "\n",
     "settings = Settings()\n",
     "memory = UnboundedMemory()\n",
-    "model_client = OpenAIClient(model=\"gpt-5.1\", api_key=settings.OPENAI_API_KEY)\n",
+    "model_client = OpenAIClient(model=\"gpt-4o-mini\", api_key=settings.OPENAI_API_KEY)\n",
     "tool = GetCurrentTimeTool()\n",
-    "agent = ReActAgent(name=\"test_agent\", description=\"test_agent\", memory=memory, model_client=model_client, tools=[tool])\n",
-    "print(agent)  # Just to demonstrate usage"
+    "# agent = ReActAgent(name=\"test_agent\", description=\"test_agent\", memory=memory, model_client=model_client, tools=[tool])\n",
+    "print(model_client)  # Just to demonstrate usage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cb19d50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from agent_framework.model_clients.openai.openai_client import OpenAIClient\n",
+    "\n",
+    "client = OpenAIClient(model=\"gpt-4o-mini\")\n"
    ]
   },
   {
@@ -34,44 +46,82 @@
    "execution_count": 2,
    "id": "dcc89a0f",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from agent_framework.messages.agent_messages import UserMessage\n",
+    "\n",
+    "# user_message = UserMessage(content=\"hi\")\n",
+    "# response = await agent.run(\"what is current time\")\n",
+    "# response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b98702ae",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"timestamp\": \"2026-01-25T20:29:58.972678\", \"level\": \"INFO\", \"name\": \"agent_framework\", \"message\": \"[test_agent] Starting run for input: what is current time...\"}\n",
-      "{\"timestamp\": \"2026-01-25T20:29:58.973425\", \"level\": \"INFO\", \"name\": \"agent_framework\", \"message\": \"[test_agent] Iteration 1/10\"}\n",
-      "{\"timestamp\": \"2026-01-25T20:30:00.550082\", \"level\": \"INFO\", \"name\": \"httpx\", \"message\": \"HTTP Request: POST https://api.openai.com/v1/responses \\\"HTTP/1.1 200 OK\\\"\"}\n",
-      "{\"timestamp\": \"2026-01-25T20:30:00.617550\", \"level\": \"INFO\", \"name\": \"agent_framework\", \"message\": \"[test_agent] Tool calls requested: ['get_current_time']\"}\n",
-      "{\"timestamp\": \"2026-01-25T20:30:00.618537\", \"level\": \"INFO\", \"name\": \"agent_framework\", \"message\": \"[test_agent] Executing get_current_time with {'timezone': 'UTC'}\"}\n",
-      "{\"timestamp\": \"2026-01-25T20:30:00.619155\", \"level\": \"INFO\", \"name\": \"agent_framework\", \"message\": \"[test_agent] Iteration 2/10\"}\n",
-      "{\"timestamp\": \"2026-01-25T20:30:04.096787\", \"level\": \"INFO\", \"name\": \"httpx\", \"message\": \"HTTP Request: POST https://api.openai.com/v1/responses \\\"HTTP/1.1 200 OK\\\"\"}\n",
-      "{\"timestamp\": \"2026-01-25T20:30:04.098941\", \"level\": \"INFO\", \"name\": \"agent_framework\", \"message\": \"[test_agent] No tool calls, finishing.\"}\n"
+      "{\"timestamp\": \"2026-01-30T18:56:54.589216\", \"level\": \"INFO\", \"name\": \"agent_framework\", \"message\": \"[test_agent] Starting streaming run for input: what is current time...\"}\n",
+      "{\"timestamp\": \"2026-01-30T18:56:54.590140\", \"level\": \"INFO\", \"name\": \"agent_framework\", \"message\": \"[test_agent] [stream] Iteration 1/10\"}\n",
+      "{\"timestamp\": \"2026-01-30T18:56:54.993013\", \"level\": \"INFO\", \"name\": \"httpx\", \"message\": \"HTTP Request: POST https://api.openai.com/v1/responses \\\"HTTP/1.1 200 OK\\\"\"}\n",
+      "{\"\n",
+      "timezone\n",
+      "\":\"\n",
+      "UTC\n",
+      "\"}\n",
+      "\n",
+      "{\"timestamp\": \"2026-01-30T18:56:55.687492\", \"level\": \"INFO\", \"name\": \"agent_framework\", \"message\": \"[test_agent] [stream] Heuristically detected tool call for 'get_current_time' with args: {'timezone': 'UTC'}\"}\n",
+      "{\"timestamp\": \"2026-01-30T18:56:55.688124\", \"level\": \"INFO\", \"name\": \"agent_framework\", \"message\": \"[test_agent] [stream] Tool calls requested: ['get_current_time']\"}\n",
+      "{\"timestamp\": \"2026-01-30T18:56:55.688536\", \"level\": \"INFO\", \"name\": \"agent_framework\", \"message\": \"[test_agent] [stream] Executing get_current_time with {'timezone': 'UTC'}\"}\n",
+      "{\"datetime\": \"2026-01-30T18:56:55.688985\", \"timezone\": \"UTC\", \"timestamp\": 1769779615.688985}\n",
+      "{\"timestamp\": \"2026-01-30T18:56:55.689315\", \"level\": \"INFO\", \"name\": \"agent_framework\", \"message\": \"[test_agent] [stream] Iteration 2/10\"}\n",
+      "{\"timestamp\": \"2026-01-30T18:56:56.042190\", \"level\": \"INFO\", \"name\": \"httpx\", \"message\": \"HTTP Request: POST https://api.openai.com/v1/responses \\\"HTTP/1.1 200 OK\\\"\"}\n",
+      "The\n",
+      " current\n",
+      " time\n",
+      " in\n",
+      " UTC\n",
+      " is\n",
+      " **\n",
+      "January\n",
+      " \n",
+      "30\n",
+      ",\n",
+      " \n",
+      "202\n",
+      "6\n",
+      ",\n",
+      " \n",
+      "18\n",
+      ":\n",
+      "56\n",
+      ":\n",
+      "55\n",
+      "**\n",
+      ".\n",
+      "The current time in UTC is **January 30, 2026, 18:56:55**.\n",
+      "\n",
+      "{\"timestamp\": \"2026-01-30T18:56:57.115702\", \"level\": \"INFO\", \"name\": \"agent_framework\", \"message\": \"[test_agent] [stream] No tool calls, finishing.\"}\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'The current time is 2026-01-25T20:30:00.619031 (UTC).'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "from agent_framework.messages.agent_messages import UserMessage\n",
     "\n",
     "user_message = UserMessage(content=\"hi\")\n",
-    "response = await agent.run(\"what is current time\")\n",
-    "response"
+    "stream = agent.run_stream(\"what is current time\")\n",
+    "async for msg in stream:\n",
+    "    print(msg.content)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b98702ae",
+   "id": "c7c91207",
    "metadata": {},
    "outputs": [],
    "source": []
