Add WebSurferTool for automated web browsing and content extraction
- Implemented WebSurferTool using Playwright for browser automation.
- Added methods for navigating to URLs, extracting text/HTML/metadata, taking screenshots, and interacting with page elements.
- Included support for scrolling and executing JavaScript.
- Established a session management system to maintain browser state across multiple actions.
- Defined a comprehensive tool schema for input actions and parameters.

--- a/notebooks/00_initial_pahse/start.ipynb
+++ b/notebooks/00_initial_pahse/start.ipynb
@@ -43,21 +43,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "dcc89a0f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from agent_framework.messages.agent_messages import UserMessage\n",
+    "# from agent_framework.messages import UserMessage\n",
     "\n",
-    "# user_message = UserMessage(content=\"hi\")\n",
+    "# user_message = UserMessage(content=[\"hi\"])\n",
     "# response = await agent.run(\"what is current time\")\n",
-    "# response"
+    "# response\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b98702ae",
    "metadata": {},
    "outputs": [
@@ -110,12 +110,12 @@
     }
    ],
    "source": [
-    "from agent_framework.messages.agent_messages import UserMessage\n",
+    "from agent_framework.messages import UserMessage\n",
     "\n",
-    "user_message = UserMessage(content=\"hi\")\n",
-    "stream = agent.run_stream(\"what is current time\")\n",
-    "async for msg in stream:\n",
-    "    print(msg.content)"
+    "user_message = UserMessage(content=[\"hi\"])\n",
+    "# stream = agent.run_stream(\"what is current time\")\n",
+    "# async for msg in stream:\n",
+    "#     print(msg.content)\n"
    ]
   },
   {
