--- a/notebooks/00_initial_pahse/mcp_test.ipynb
+++ b/notebooks/00_initial_pahse/mcp_test.ipynb
@@ -236,6 +236,36 @@
     "                                                            })\n",
     "    pprint(res_search)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e2242cf2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "math.lcm(12, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "389fec92",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
