Remove outdated documentation files and update project structure
- Deleted `GETTING_STARTED.md`, `MCP_GUIDE.md`, `MCP_NATIVE_ARCHITECTURE.md`, and `ROADMAP.md` as they are no longer relevant.
- Updated `pyproject.toml` to specify the package directory for building the wheel.

--- a/notebooks/spotify_api_test.ipynb
+++ b/notebooks/spotify_api_test.ipynb
@@ -784,6 +784,24 @@
     "- Quota extension guide: https://developer.spotify.com/documentation/web-api/concepts/quota-modes\n",
     "- Developer forum: https://community.spotify.com/t5/Spotify-for-Developers/bd-p/Spotify_Developer"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3adca2db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PQqEaiY1agRyzVEmxtA4v1BHODGzuJWlQRuFmZZzEDM=\n"
+     ]
+    }
+   ],
+   "source": [
+    "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
+   ]
   }
  ],
  "metadata": {
